<?xml version="1.0"?>
<package format="2">
  <name>tb3_localization</name>
  <version>3.0.0</version>
  <description>Este paquete fue creado para la Actividad 1 del curso de NARM</description>

  <maintainer email="renzo.chan@outlook.com">Renzo Chan</maintainer>
  <license>BSD</license>
  <author email="renzo.chan@outlook.com">Renzo Chan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
